--- a/Chat/css/style.css
+++ b/Chat/css/style.css
@@ -5,6 +5,13 @@
 body{
 	font-family: Verdana, Geneva, sans-serif;
 }
+table{
+	width: 100%;
+}
+td{
+	width:25%;
+	padding: 5px;
+}
 p.msg{
 	background-color:green;
 	margin: 0px 0px 2px 0px;
@@ -15,11 +22,30 @@ p.msg{
 	float: left;
 }
 
+.login-externo{
+	display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+.login-middle{
+	display: table-cell;
+    vertical-align: middle;
+}
+#login{
+	background-color: #ff9900;
+	border: 2px solid black;
+	width: 400px;
+	height: 300px;
+	margin: auto;
+	padding: 5px;
+}
+
+
 #main{
-	#display: none;
+	display: none;
 	width: 100%;
 	height:100%;
-	#text-align: center;
 }
 
 
@@ -128,7 +154,15 @@ p.msg{
 	float:left;
 	margin: 3px 5px 0px 3px;
 }
-
+.avatar4{
+	width: 50px;
+	height: 50px;
+}
+.avatar4:hover{
+	opacity: 0.3;
+	transition:opacity 0.5s linear;
+	#border: 1px solid black;
+}
 
 #right{
 	min-height: 300px;
@@ -210,6 +244,10 @@ p.msg{
 	width: 24%;
 	min-height: 20px;
 	height: 90%
+}
+.mini2{
+	width: 40%;
+	height: 30px;
 }
 
 
