Room user list (code)

--- a/Chat/css/style.css
+++ b/Chat/css/style.css
@@ -216,10 +216,10 @@ p.msg{
 }
 
 .rcv{
-	background-color:gray;
+	background-color:#f5f5f0;
 }
 .snd{
-	background-color:green;
+	background-color:#ffe0b3;
 }
 
 
