--- a/Chat2/css/style.css
+++ b/Chat2/css/style.css
@@ -339,4 +339,20 @@ td{
 
 .canvas-general{
 	height: 100%;
+	width: calc(100% - 300px);
+	margin-left: 300px;
+	background-color: #2e3030;
+}
+.canvas-menu{
+	float: left;
+	width: 60px;
+	height: calc(100% - 2px);
+	border-right: 2px solid black;
+	padding: 1px;
+}
+.canvas-content{
+	float: right;
+	width: calc(100% - 75px);
+	height: calc(100% - 10px);
+	padding: 5px;
 }
