Private chats and light in canvas

--- a/Chat2/css/style.css
+++ b/Chat2/css/style.css
@@ -244,6 +244,9 @@ td{
 	background-color: #804d00;
 	color: white;
 }
+.chat-active{
+	background-color: #b36b00;
+}
 
 .chat-msgs{
 	min-height: 300px;
